# SimSearch

./: .clang-format  .gitignore  CMakeLists.txt  README.md
clients/: dynamic_resource.h  etcd_client.cc  etcd_client.h  ps_rpc_client.cc  ps_rpc_client.h
common/: brpc_options.cc  brpc_options.h  common.cc  common.h  common_type.cc  common_type.h  dto.cc  dto.h
config/: conf.cc  conf.h  config.toml  toml_conf.cc  toml_conf.h
engine/: engine.cc  engine.h
example/: etcdctl.cc
idl/: gen_build.sh
idl/etcd_idl/: auth.proto  etcdserver.proto  http_api.proto  rpc.proto  v3election.proto  v3lock.proto
idl/etcd_idl/google/api/: annotations.proto
idl/rpc_service_idl/: common_rpc.proto  master_rpc.proto  ps_rpc.proto  raft_rpc.proto  router_rpc.proto
master/: go.mod  go.sum  main.go  run.sh
master/clusterapi/: cluster_api.go  space_api.go
master/common/: common.go
master/config/: config.go  defaut_conf.toml  master_config.go  ps_config.go  router_config.go
master/entity/: dto.go  replica.go  space.go  vector_index.go
master/etcdcluster/: distributed_lock.go  etcd_client.go  etcd_service.go  storager.go  store_client.go  watch_job.go
master/monitor/: monitor.go
master/utils/concurrent/: concurrent.go
master/utils/genericutil/: generic_util.go
master/utils/httputil/: request_util.go
master/utils/slog/: baud_glog.go  baud_glog_file.go  baud_log.go  baud_log_test.go
master/utils/timeutil/: timeutil.go
raft_store/: raft_client.cc  raft_client.h  raft_store.cc  raft_store.h
scripts/: clear_cach.sh  etcdctl.sh
service/: ps_main.cc  router_main.cc
service/ps/: brpc_server.cc  brpc_server.h  local_mata.cc  local_mata.h  local_storager.cc  local_storager.h  ps_register.cc  ps_register.h  ps_rpc.cc  ps_rpc.h  raft_rpc.cc  raft_rpc.h
service/router/: local_spaces.cc  local_spaces.h  partition_connection.cc  partition_connection.h  router_register.cc  router_register.h  router_rpc.cc  router_rpc.h  router_server.cc  router_server.h  space_connection.cc  space_connection.h  space_manager.cc  space_manager.h
test/: block_client.cc  braft_client_test.cc  brpc_etcd_client_unitest.cc  echo.proto  test_etcd_range.py
utils/: brpc_http.h  file_tool.cc  file_tool.h  hash_algo.cc  hash_algo.h  log.cc  log.h  net.cc  net.h  numeric_util.cc  numeric_util.h  one_writer_multi_reader_map.cc  one_writer_multi_reader_map.h  random.cc  random.h
